# machado-assis-oraculo-rag

./: .env.example  .gitignore  README.md  initialize.py  main.py  pyproject.toml  requirements.txt  test_grader.py  test_rag.py  test_retriever.py
docs/: Aula3_rag.ipynb  chatbot_biologia_rag_guardrails_fallback_(1) (1).ipynb  estrutura_pasta.md
docs/spikes/: architecture-langgraph-state-management-spike.md  infrastructure-vector-store-scaling-spike.md  llm-provider-multi-model-support-spike.md  performance-reranking-accuracy-spike.md
src/: __init__.py  config.py  main.py
src/domain/: __init__.py  guardrails_check.py  state.py
src/infrastructure/: __init__.py  llm_factory.py  vector_store.py
src/use_cases/: __init__.py  graph.py  nodes.py
src/utils/: __init__.py  logging.py
